@@ -311,6 +311,8 @@ int sd_notify_barrier(int unset_environment, uint64_t timeout);
 */
 int sd_pid_notify_barrier(pid_t pid, int unset_environment, uint64_t timeout);
 
+int sd_pidfd_get_inode_id(int pidfd, uint64_t *ret);
+
 /*
   Returns > 0 if the system was booted with systemd. Returns < 0 on
   error. Returns 0 if the system was not booted with systemd. Note
